# Formatif

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
docs/: index.html
scripts/: stage-tools-macos.sh  stage-tools-windows.ps1
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: args.rs  commands.rs  ffmpeg.rs  lib.rs  state.rs  tools.rs  watcher.rs
src/components/: LangToggle.tsx  Logo.tsx  TitleBar.tsx
src/components/action-bar/: BottomBar.tsx
src/components/compression/: Chip.tsx  CompressionControls.tsx  SegmentedButtons.tsx
src/components/file-grid/: AddMoreTile.tsx  CompareDialog.tsx  CompareShell.tsx  EmptyDropzone.tsx  FileCard.tsx  FileGrid.tsx  VideoCompareDialog.tsx  VideoPreviewDialog.tsx
src/components/file-panel/: FilePanel.tsx
src/components/settings/: SettingsNav.tsx  parts.tsx
src/components/settings/panels/: AboutPanel.tsx  AppearancePanel.tsx  ExtensionsPanel.tsx  GeneralPanel.tsx  MediaPanel.tsx  MonitoringPanel.tsx
src/components/sidebar/: FilenameInput.tsx  OutputCard.tsx  PresetHeader.tsx  PresetSidebar.tsx  TypeSettingsCard.tsx
src/components/ui/: button.tsx  hover-card.tsx  select.tsx  sonner.tsx  table.tsx
src/hooks/: useDragDrop.ts  useIngest.ts  useRunCompression.ts
src/lib/: compress.ts  decode.ts  i18n.ts  pdf.ts  tauri.ts  utils.ts
src/screens/: MainScreen.tsx  SettingsView.tsx
src/store/: store.ts
