[package]
name = "formatif"
# Cargo requires a literal version here and can't reference another file, but
# this isn't the source of truth — package.json is (tauri.conf.json's
# "version" points there); bump it too when cutting a release, but nothing
# reads this field at runtime.
version = "1.1.0"
description = "Formatif — lightweight, local media compression for images, video, GIF and PDF"
authors = ["Formatif"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["process", "io-util", "fs", "sync", "time", "macros", "rt-multi-thread"] }
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
notify = "6"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
keepawake = "0.6.0"
